docs: :memo: Finish project docs
